dir.c
@@ -2305,7 +2305,7 @@ glob_helper(
 #endif
             break;
           case BRACE:
-            if (!recursive) {
+            if (!recursive || strchr(p->str, '/')) {
                 brace = 1;
             }
             break;
